<resources>
    <string name="app_name">Weather</string>
    <string name="empty_string"> </string>

    <string name="login_register">Login / Register</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="current_location">Current Location</string>
    <string name="edit_location">Edit Location</string>

    <string name="open_nav">OPEN</string>
    <string name="close_nav">ClOSE</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>

    <string name="gps_dialog_explain">To get weather data you need to provide gps services to update your location</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_disabled">Location servers are disabled</string>
    <string name="turn_on_location_service">Turn on Location Service</string>
    <string name="enabled_location">Enabled location</string>

    <string name="later">Later</string>
    <string name="try_again">Try again</string>

    <string name="please_enter_city_name">Please enter city name</string>

    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
    <!-- Explanations-->
    <string name="check_the_weather">Check the weather and see beautiful photos of cities around the world</string>
    <string name="you_ll_never_miss_a_forecast">You\'ll never miss a forecast</string>

    <string name="weather">Weather</string>
    <string name="rainfall_warning">Rainfall warning</string>
    <string name="push_info">Turn on push notifications to receive the latest weather forecasts</string>
    <string name="upcoming_rainfall">Upcoming rainfall</string>
    <string name="everyday_weather">Everyday weather</string>
    <string name="temperature_changes">Temperature changes</string>
    <string name="weather_alert">Weather alert</string>

    <string name="enable_notifications">Enable notifications</string>
    <string name="no_thanks">No, thanks</string>
    <string name="add_popular_places">Add popular places</string>

    <!-- Errors-->
    <string name="error_try_again_later_message">Error, try again later</string>
    <!-- Network-->
    <string name="error_no_network">No network connection</string>
    <string name="error_network_unavailable">Network is not available</string>
    <string name="error_connect_server">Unable to connect to server</string>
    <string name="error_invalid_response">Invalid response from server</string>
    <string name="global_network_error_message">Sorry, something went wrong while updating weather
        information.Please try again later</string>
    <!-- SQLITE-->
    <string name="error_sql">Unable to load data from the database</string>
    <string name="data_not_found">Can not find any data </string>
    <!-- LOCATION-->
    <string name="error_gps_location">Error obtaining GPS location</string>
    <string name="no_location_permission">Check location permission</string>
    <string name="error_gps_lost">GPS signal lost</string>
    <string name="error_provider_disabled">Location provider disabled</string>
    <string name="error_gps_unavailable">GPS hardware not available</string>
    <string name="error_location_retrieve">Unable to retrieve current location</string>


</resources>