<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/location_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/turn_on_location_service"
        android:textAppearance="@style/TextAppearance.Weather.BodySmall"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>


    <TextView
        android:id="@+id/location_service_explore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/gps_dialog_explain"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Weather.BodySmall"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_service">

    </TextView>

    <Button
        android:id="@+id/btt_later"
        style="@style/Widget.Weather.Button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/colorError"
        android:text="@string/later"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_service_explore" />

    <Button
        android:id="@+id/btt_enable_location"
        style="@style/Widget.Weather.Button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/enable_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btt_later" />

</androidx.constraintlayout.widget.ConstraintLayout>

