<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_popular_places"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Weather.DisplayMedium">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin12dp"
        android:text="@string/check_the_weather"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Weather.BodyLarge">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin12dp"
        android:layout_marginTop="@dimen/margin24dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_popular_places">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btt_finish"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin24dp"
        android:backgroundTint="@color/light_gray"
        android:text="@string/finish">

    </Button>

</LinearLayout>